--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@auth0/auth0-react": "^2.2.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.16",
     "@mui/x-data-grid": "^6.16.3",
     "@reduxjs/toolkit": "^1.9.7",
     "react": "^18.2.0",
